--- a/config/corne.conf
+++ b/config/corne.conf
@@ -2,11 +2,6 @@
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 
-# Zen display tweaks, requires patches by caksoylar
-CONFIG_ZMK_DISPLAY_FULL_REFRESH_PERIOD=300
-CONFIG_ZMK_DISPLAY_HIDE_MOMENTARY_LAYERS=y
-CONFIG_CUSTOM_WIDGET_LAYER_STATUS_HIDE_HEADING=y
-
 # Combo config, automated by build script
 CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=6
 CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=3
@@ -15,4 +10,12 @@ CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=3
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Personal config
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
+CONFIG_ZMK_KEYBOARD_NAME="Kab Corne"
+
+# Battery reporting
+CONFIG_ZMK_BATTERY_REPORTING=y
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=600
 
