--- a/config/corne.conf
+++ b/config/corne.conf
@@ -23,3 +23,11 @@ CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_BT_MAX_CONN=3
 CONFIG_BT_MAX_PAIRED=3
+
+# Personal config
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
+CONFIG_ZMK_KEYBOARD_NAME="Kab Corne"
+
+# Battery reporting
+CONFIG_ZMK_BATTERY_REPORTING=y
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=600
