--- a/config/cradio.conf
+++ b/config/cradio.conf
@@ -26,3 +26,11 @@ CONFIG_CUSTOM_WIDGET_LAYER_STATUS_HIDE_HEADING=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Personal config
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
+CONFIG_ZMK_KEYBOARD_NAME="Kab Sweep"
+
+# Battery reporting
+CONFIG_ZMK_BATTERY_REPORTING=y
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=600
