--- a/build.yaml
+++ b/build.yaml
@@ -13,4 +13,4 @@
 #
 ---
 board: [ "nice_nano_v2" ]
-shield: [ "corne_left", "corne_right", "cradio_left", "cradio_right" ]
+shield: [ "corne_dongle" ,"corne_left", "corne_right", "cradio_left", "cradio_right", "settings_reset" ]
