--- a/config/corne.conf
+++ b/config/corne.conf
@@ -23,6 +23,8 @@ CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_BT_MAX_CONN=3
 CONFIG_BT_MAX_PAIRED=3
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 
 # Personal config
 CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
